# ComputerGraphics

./: .gitignore
Assignment0_CPlusPlus/: README.md
Assignment0_CPlusPlus/include/: PPM.h
Assignment0_CPlusPlus/src/: main.cpp  ppm.cpp
Assignment1_MathFoundations1/: CMakeLists.txt  README.md
Assignment1_MathFoundations1/include/: Matrix4f.h  Vector4f.h
Assignment1_MathFoundations1/src/: main.cpp
Assignment3_ModelParser/: BasicWidget.cpp  BasicWidget.h  CMakeLists.txt  FileReader.cpp  FileReader.h
Assignment4_TexturedModel/: Application.h  BasicWidget.h  Displayable.cpp  Displayable.h  README.md  main.cpp
Assignment5_NormalMappedModel/: BasicWidget.cpp  BasicWidget.h  CMakeLists.txt  Displayable.cpp  Displayable.h  MtlLoader.cpp  ObjLoader.cpp  README.md  Renderable.cpp  frag.glsl  main.cpp  vert.glsl
Lab10_FBOs/: BasicWidget.cpp  FBOFrag.glsl
Lab1_C_Plus_Plus_SoftwareRasterizerPart1/: graphics_lab2.ppm  main.cpp
Lab3_Starfield/: README.md  StarList.cpp
Lab4_MatrixTransformations/: Matrix4f.h
Lab5_Part1/: BasicWidget.cpp
Lab5_Part2/: BasicWidget.cpp  README.md
Lab6_ColorAndTransforms/: BasicWidget.cpp
Lab7_AbstractionsAndTextures/: BasicWidget.cpp  frag.glsl  vert.glsl
Lab8_CameraAndIllumination/: BasicWidget.cpp  Camera.cpp  UnitQuad.cpp  frag.glsl  vert.glsl
Lab9_Heightfields/: TerrainQuad.cpp
NuAss3/: BasicWidget.cpp  BasicWidget.h  CMakeLists.txt
